--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.java.study</groupId>
-    <artifactId>bester</artifactId>
+    <artifactId>oo-studying</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>bester</module>
+    </modules>
 
 
 </project>
